package SmartHome.domain.sensor.externalServices;

public interface ExternalServices {
}
